<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundApp"
    tools:context=".autenticacao.CadastroActivity">

    <ImageView
        android:id="@+id/imgView_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_voltar"
        style="@style/VectorAssetColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgView_logo2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/imgView_voltar"
        app:layout_constraintEnd_toStartOf="@+id/btn_entrar"
        app:layout_constraintStart_toEndOf="@+id/imgView_voltar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/txt_entrar_cadastro"
        android:textStyle="bold"
        style="@style/TextColorApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView_voltar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_crie_sua_conta"
                android:textAlignment="textStart"
                style="@style/TextColorApp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/edit_nome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/edit_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/txt_nome"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/edit_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/edit_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/txt_data_nasc"
                android:inputType="date"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/edit_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_nome" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/edit_senha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_data" />

            <EditText
                android:id="@+id/edit_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/txt_senha"
                android:inputType="numberPassword"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/edit_telefone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_email" />

            <EditText
                android:id="@+id/edit_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/txt_telefone"
                android:inputType="phone"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/edit_endereco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_senha" />

            <EditText
                android:id="@+id/edit_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/txt_endereco"
                android:inputType="textPostalAddress"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/btn_continuar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_telefone" />

            <android.widget.Button
                android:id="@+id/btn_continuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"
                android:text="@string/txt_continuar"
                android:textAllCaps="true"
                style="@style/TextColorApp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_endereco"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>