<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundApp"
    tools:context=".fragment.AddFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:cardBackgroundColor="@color/cor_geral"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toTopOf="@+id/et_titulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"/>

                    <ImageView
                        android:id="@+id/imageViewFake"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="24dp"
                        android:src="@drawable/ic_camera"/>

                </FrameLayout>


            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_edit3"
                android:hint="@string/txt_titulo"
                android:inputType="text"
                android:textColorHint="@color/cor_geral"
                android:textColor="@android:color/white"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/et_genero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"/>

            <EditText
                android:id="@+id/et_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edit3"
                android:hint="@string/txt_genero"
                android:inputType="text"
                android:textColorHint="@color/cor_geral"
                android:textColor="@android:color/white"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/et_elenco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_titulo" />

            <EditText
                android:id="@+id/et_elenco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edit3"
                android:hint="@string/txt_elenco"
                android:inputType="text"
                android:textColorHint="@color/cor_geral"
                android:textColor="@android:color/white"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_genero" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/et_sinopse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_elenco">

                <EditText
                    android:id="@+id/et_ano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edit3"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/txt_ano"
                    android:inputType="date"
                    android:textColorHint="@color/cor_geral"
                    android:textColor="@android:color/white"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/et_duracao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edit3"
                    android:hint="@string/txt_duracao"
                    android:padding="16dp"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/cor_geral" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_sinopse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_edit3"
                android:hint="@string/txt_sinopse"
                android:padding="16dp"
                android:inputType="text"
                android:textColorHint="@color/cor_geral"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <android.widget.Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_edit"
                android:text="@string/txt_cadastrar"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_sinopse" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/cor_geral"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_cadastrar" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>